--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,69 @@ footer {
     transform: scale(1.05);
     background-color: #e0e0e0;
 }
+/* THERE IS ALSO AN ADOBE FONTS STYLESHEET WITH ALL OF MY FONTS
+@charset "utf-8";
+body {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+}
+.bg {
+	background-color: #f3eade;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	display: block;
+}
+header{
+	text-align: center;
+}
+footer{
+	text-align: center;
+	font-size: 18px;
+	height: 100px;
+}
+h1{
+	font-family: "Ambicase-modern";
+	font-weight: normal;
+	font-size: 90px;
+	margin:0;
+	padding: 18px 18px 10px 18px;
+}
+h2{
+	font-family: "Ambicase-modern";
+	font-size: 54px;
+	font-weight: 400;
+	margin:0;
+	padding: 8px;
+}
+h3{
+	font-family: "franklin-gothic-std";
+	font-weight: 200;
+	font-style: italic;
+	font-size: 38px;
+	margin:0;
+}
+h4{
+	font-family: "edita";
+	font-weight: 700;
+	font-style: normal;
+	font-size: 22px;
+	margin:0;
+	padding: 10px;
+}
+p{
+	font-family: "edita";
+	font-weight: 400;
+	font-size: 20px;
+	margin:0;
+}
+h6{
+	font-family: "edita-small";
+	font-size: 16px;
+	font-style: italic;
+	font-weight: 400;
+	margin:0;
+	padding: 15px;
+}
+    */
